# tau

./: .clang-format  .gitignore  CMakeLists.txt  build.sh
.cache/clangd/index/: FastNoiseLite.c.54F3EDF94DAB6BFC.idx  FastNoiseLite.h.1E2511E386E6FAAC.idx  aabb2d.h.A11547E70C7D0AF9.idx  aabb2d.h.E18FBE1A3A2F3F42.idx  affine-mat.h.77122010A6ECC74B.idx  affine-post.h.3C2D8AB62A134546.idx  affine-pre.h.B4AC834EB5ADD6D2.idx  affine.c.1368606CE517B03D.idx  affine.h.6BC4CBA1BBE98DF4.idx  affine.h.961A0531C89A4741.idx  affine.h.F724D88D89F0A54C.idx  affine2d.c.4DCD05C357A75CD5.idx  affine2d.h.21C62932C0AAAEBC.idx  affine2d.h.AC7C36231D8E263D.idx  arm.h.CEEA49CBB1CFC7D0.idx  bezier.c.BE3D51168AF91219.idx  bezier.h.2BEC74FBB3920137.idx  bezier.h.C56E5F21A4706182.idx  box.c.5B7AC85480EC7468.idx  box.h.6F7218BC6ACA99DD.idx  box.h.7BDF19DB2DCC5FFD.idx  call.h.44526F3DA3625F72.idx  cam.c.D02D3F8E79DF122E.idx  cam.h.CA7FFD8C33E9A9AD.idx  cam.h.E487E457253984D4.idx  camera.c.CB88EA16AB3F4539.idx  camera.h.A92D56938ABFCC30.idx  cglm.h.1DAF0F492EB3DBA7.idx  chunk.c.D2A796BE735D8842.idx  chunk.h.66E2B82487468F1A.idx  color.h.AFD9B6110C05C02B.idx  common.h.4E6B3F12F3594FD2.idx  curve.c.1D6C1B1DE18DA948.idx  curve.h.E0D5D1AE026D8279.idx  curve.h.E7648CD9F43100EF.idx  ease.c.5EBE4FC926C74CC5.idx  ease.h.66A39310537C1E47.idx  ease.h.F86F4E568D2CE544.idx  euler.c.287D4F45AEA3CD11.idx  euler.h.52B10EEF8BC818F5.idx  (+143 more)
include/glad/: glad.h
resource/: block.frag  block.vert  test.txt  tri.frag  tri.vert
src/: camera.c  camera.cpp  camera.h  camera.hpp  chunk.c  chunk.cpp  chunk.h  chunk.hpp  glad.c  main.c  main.cpp  resource.c  resource.cpp  resource.h  resource.hpp  shader.c  shader.cpp  shader.h  shader.hpp  state.c  state.cpp  state.h  texture.c  texture.cpp  texture.h  texture.hpp  util.h  world.c  world.cpp  world.h
